Closed
Bug 1707869
Opened 4 years ago
Closed 4 years ago
Trying to open native context menus for items found inside panels (while in full screen mode) doesn’t work
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
VERIFIED
FIXED
90 Branch
People
(Reporter: emilghitta, Assigned: spohl)
References
(Blocks 1 open bug)
Details
(Whiteboard: [proton-context-menus] [proton-uplift])
Attachments
(2 files)
Affected versions
- Firefox 90.0a1 (BuildId:20210426213158)
- Firefox 89.0b4 (BuildId:20210425185730)
Affected platforms
- macOS 10.14
- macOS 11.3
Unaffected platforms
- Windows 10 64bit.
- Ubuntu 20.04 64bit.
Preconditions
- Have the
widget.macos.native-context-menusandbrowser.proton.enabledprefs enabled.
Steps to reproduce
- Launch Firefox.
- Enter in full screen mode.
- Click on the Hamburger menu.
- Select the “Bookmarks” option.
- Try opening the context menu for a listed bookmark.
Expected result
- The context menu opens successfully.
Actual result
- The context menu doesn’t open. It seems that the context menu tries to open but it gets closed automatically (almost instantly).
Regression Range
- This issue is reproducible only with native context menus enabled. This issue seems to be reproducible on builds from 2021-03-23 as well (When the initial support for native context menus landed in Bug 1698997)
Additional Notes
- Access the following link for screencast (Mozilla account needed).
- Encountered this on the Bookmarks & History items. This issue is also reproducible from the bookmarks & history items exposed from the library panel.
- This is also reproducible on the context menu opened for the downloaded items from the download panel.
Updated•4 years ago
|
See Also: → https://jira.mozilla.com/browse/FIDEFE-1470
Updated•4 years ago
|
Assignee: nobody → mstange.moz
Status: NEW → ASSIGNED
| Assignee | ||
Updated•4 years ago
|
Assignee: mstange.moz → spohl.mozilla.bugs
| Assignee | ||
Comment 2•4 years ago
|
||
| Assignee | ||
Comment 3•4 years ago
|
||
Depends on D113579
Pushed by spohl@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/705b32ab24dc
Introduce helper to detect when native context menus are enabled via prefs on macOS. r=mstange
https://hg.mozilla.org/integration/autoland/rev/eaf8bc2be960
Disable context menu tracking when native context menus are used to avoid accidental closing of context menus in fullscreen mode. r=mstange
Comment 5•4 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/705b32ab24dc
https://hg.mozilla.org/mozilla-central/rev/eaf8bc2be960
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Comment 7•4 years ago
|
||
The patch landed in nightly and beta is affected.
:spohl, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
Flags: needinfo?(spohl.mozilla.bugs)
| Assignee | ||
Comment 8•4 years ago
|
||
Markus will be handling uplifts. Forwarding n-i.
Flags: needinfo?(spohl.mozilla.bugs) → needinfo?(mstange.moz)
Comment 9•4 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Whiteboard: [proton-context-menus] → [proton-context-menus] [proton-uplift]
Updated•4 years ago
|
Flags: needinfo?(mstange.moz)
Updated•4 years ago
|
Flags: qe-verify+
| Reporter | ||
Comment 10•4 years ago
|
||
This issue is verified fixed using Firefox 89.0b8 (BuildId:20210504185920) and Firefox 90.0a1 (BuildId:20210504214950) on macOS 10.15 & 10.14
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in
before you can comment on or make changes to this bug.
Description
•