Bug 1707869: Disable context menu tracking when native context menus are used to avoid accidental closing of context menus in fullscreen mode. r=mstange a=pascalc

Depends on D113579

Differential Revision: https://phabricator.services.mozilla.com/D113580